# dmwatch

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
config/: dmshmagent.csv  dmshmserver.csv
include/: dmconsole.h  dmcrc.h  dmformat.h  dmos.h  dmshm.h  dmthread.h  dmwatch.h
src/: dmshm.cpp  dmwatch_module.cpp  dmwatch_module.h
test/: dmshmagent.cpp  dmshmagent.h  dmshmagentmain.cpp  dmshmserver.cpp  dmshmserver.h  dmshmservermain.cpp  dmwatchtest.cpp
